# ai-desktop

./: .gitignore  .opencode-project-rules.md  Cargo.toml  README.md  ROADMAP.md  build.sh  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: release.yml
docs/: tauri-v2-reference.rs
src/: App.jsx  index.css  main.jsx  tools.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AboutDialog.jsx  ConfirmationDialog.jsx  SettingsModal.jsx  StepMessage.jsx  WelcomeWizard.jsx
src/utils/: memory.js  tools.js
voice-terminal/: .opencode-project-rules.md  ARCH.md  IMPLEMENTATION_PLAN.md  asr_engine.py  audio_utils.py  config.py  config.yaml  gateway.py  llm_client.py  requirements-gateway.txt  requirements-win.txt  router.py  tts_engine.py  win_client.py  win_config.json
voice-terminal/tasks/: task1_core.txt  task2_llm.txt  task3_gateway.txt  task4_winclient.txt
